--- a/docs/src/_components/shared/note.html.erb
+++ b/docs/src/_components/shared/note.html.erb
@@ -1,6 +1,6 @@
-<div data-component="note" data-note-theme="<%= @theme %>" class="<%= root_classes %>">
+<div data-component="note" data-note-theme="<%= theme %>" class="<%= attrs[:class] %>">
   <div class="note-tag">
-    <%= icon :message, style: :solid, size: :sm %>
+    <%= icon icon_name, size: :xs %>
   </div>
   <div class="prose max-w-none"> 
     <%= markdownify content %>
