Add scoped styles for custom panels

--- a/app/views/layouts/lookbook/skeleton.html.erb
+++ b/app/views/layouts/lookbook/skeleton.html.erb
@@ -13,9 +13,9 @@
     </style>
   <% end %>
 
-  <% if content_for? :styles %>
+  <% if content_for? :panel_css %>
     <style media="all">
-      <%= content_for :styles %>
+      <%= content_for :panel_css %>
     </style>
   <% end %>
 
