--- a/docs/src/_components/shared/note.html.erb
+++ b/docs/src/_components/shared/note.html.erb
@@ -1,4 +1,4 @@
-<div data-component="note" data-note-theme="<%= theme %>" class="<%= attrs[:class] %>">
+<div data-component="note" data-note-theme="<%= theme %>" class="<%= html_attrs[:class] %>">
   <div class="note-tag">
     <%= icon icon_name, size: :xs %>
   </div>
