--- a/app/components/lookbook/prose/component.html.erb
+++ b/app/components/lookbook/prose/component.html.erb
@@ -1,3 +1,3 @@
-<%= render_component_tag class: "prose #{size_class} text-lookbook-prose-text bg-lookbook-prose prose-a:text-lookbook-prose-link" do %>
+<%= render_component_tag class: "prose #{size_class} text-lookbook-prose-text bg-lookbook-prose-bg prose-a:text-lookbook-prose-link" do %>
   <%== rendered_content %>
 <% end %>
