--- a/app/components/lookbook/toolbar/component.html.erb
+++ b/app/components/lookbook/toolbar/component.html.erb
@@ -1,4 +1,4 @@
-<%= render_component_tag class: "h-10 border-b border-lookbook-divider w-full flex items-center text-sm flex-none bg-lookbook-toolbar" do %>
+<%= render_component_tag class: "h-10 border-b border-lookbook-divider w-full flex items-center text-sm flex-none bg-lookbook-toolbar-bg" do %>
   <div class="toolbar-sections flex items-stretch w-full">
     <%= safe_join(sections) %>
   </div>
