--- a/app/views/lookbook/previews/panels/_content.html.erb
+++ b/app/views/lookbook/previews/panels/_content.html.erb
@@ -1,4 +1,4 @@
-<div class="p-4 bg-lookbook-prose h-full">
+<div class="p-4 bg-lookbook-prose-bg h-full">
   <% if panel.content.present? %>
     <%= render_component :prose, markdown: true do %>
       <%== panel.content %>
