--- a/app/views/lookbook/previews/panels/_params.html.erb
+++ b/app/views/lookbook/previews/panels/_params.html.erb
@@ -1,5 +1,5 @@
 <% if preview.params.none? %>
-  <div class="p-4 w-full h-full bg-lookbook-prose">
+  <div class="p-4 w-full h-full bg-lookbook-prose-bg">
     <%= render_component :prose do %>
       <em class='opacity-50'>No params configured.</em>
     <% end %>
