--- a/public/lookbook-assets/css/themes/indigo.css
+++ b/public/lookbook-assets/css/themes/indigo.css
@@ -1,42 +1,63 @@
 :root {
-  --lookbook-text: #27272a;
-  --lookbook-divider: #d4d4d8;
-  --lookbook-button-text: #a1a1aa;
-  --lookbook-button-text-hover: #4f46e5;
-  --lookbook-tooltip: #6366f1;
-  --lookbook-tooltip-text: #fff;
-  --lookbook-scrollbar: #e4e4e7;
-  --lookbook-scrollbar-hover: #d4d4d8;
-  --lookbook-toolbar: #fff;
+  --lookbook-white: #fff;
+  --lookbook-accent-50: #eef2ff;
+  --lookbook-accent-100: #e0e7ff;
+  --lookbook-accent-200: #c7d2fe;
+  --lookbook-accent-300: #a5b4fc;
+  --lookbook-accent-400: #818cf8;
+  --lookbook-accent-500: #6366f1;
+  --lookbook-accent-600: #4f46e5;
+  --lookbook-accent-700: #4338ca;
+  --lookbook-accent-800: #3730a3;
+  --lookbook-accent-900: #312e81;
+  --lookbook-base-50: #fafafa;
+  --lookbook-base-100: #f4f4f5;
+  --lookbook-base-200: #e4e4e7;
+  --lookbook-base-300: #d4d4d8;
+  --lookbook-base-400: #a1a1aa;
+  --lookbook-base-500: #71717a;
+  --lookbook-base-600: #52525b;
+  --lookbook-base-700: #3f3f46;
+  --lookbook-base-800: #27272a;
+  --lookbook-base-900: #18181b;
+  --lookbook-text: var(--lookbook-base-800);
+  --lookbook-divider: var(--lookbook-base-300);
+  --lookbook-icon-button-stroke: var(--lookbook-base-400);
+  --lookbook-icon-button-stroke-hover: var(--lookbook-accent-600);
+  --lookbook-tooltip-bg: var(--lookbook-accent-500);
+  --lookbook-tooltip-text: var(--lookbook-white);
+  --lookbook-scrollbar: var(--lookbook-base-200);
+  --lookbook-scrollbar-hover: var(--lookbook-base-300);
+  --lookbook-toolbar-bg: var(--lookbook-white);
   --lookbook-toolbar-divider: var(--lookbook-divider);
   --lookbook-nav-text: var(--lookbook-text);
-  --lookbook-nav-toggle: #71717a;
-  --lookbook-nav-icon: #6366f1;
-  --lookbook-nav-item-hover: #f4f4f5;
-  --lookbook-nav-item-active: #eef2ff;
-  --lookbook-input: #fff;
-  --lookbook-input-border: #d4d4d8;
-  --lookbook-input-border-focus: #c7d2fe;
-  --lookbook-input-text: #52525b;
-  --lookbook-input-text-placeholder: #a1a1aa;
-  --lookbook-input-toggle: #d4d4d8;
-  --lookbook-input-toggle-active: #6366f1;
-  --lookbook-prose: #fff;
-  --lookbook-prose-text: #52525b;
-  --lookbook-prose-link: #312e81;
-  --lookbook-tabs-text: #71717a;
-  --lookbook-tabs-text-hover: #3f3f46;
-  --lookbook-tabs-text-disabled: #d4d4d8;
-  --lookbook-tabs-highlight: #818cf8;
-  --lookbook-viewport-handle: #fff;
-  --lookbook-viewport-handle-icon: #d4d4d8;
-  --lookbook-viewport-handle-icon-hover: #3f3f46;
-  --lookbook-sidebar: #fafafa;
-  --lookbook-page: #fff;
-  --lookbook-drawer: #fafafa;
-  --lookbook-header: #4f46e5;
-  --lookbook-header-text: #fff;
-  --lookbook-header-border: #4338ca;
+  --lookbook-nav-toggle: var(--lookbook-base-500);
+  --lookbook-nav-icon-stroke: var(--lookbook-accent-500);
+  --lookbook-nav-item-hover: var(--lookbook-base-100);
+  --lookbook-nav-item-active: var(--lookbook-accent-50);
+  --lookbook-input-bg: var(--lookbook-white);
+  --lookbook-input-border: var(--lookbook-base-300);
+  --lookbook-input-border-focus: var(--lookbook-accent-200);
+  --lookbook-input-text: var(--lookbook-base-600);
+  --lookbook-input-text-placeholder: var(--lookbook-base-400);
+  --lookbook-input-toggle: var(--lookbook-base-300);
+  --lookbook-input-toggle-active: var(--lookbook-accent-500);
+  --lookbook-prose-bg: var(--lookbook-white);
+  --lookbook-prose-text: var(--lookbook-base-600);
+  --lookbook-prose-link: var(--lookbook-accent-900);
+  --lookbook-tabs-text: var(--lookbook-base-500);
+  --lookbook-tabs-text-hover: var(--lookbook-base-700);
+  --lookbook-tabs-text-disabled: var(--lookbook-base-300);
+  --lookbook-tabs-border-active: var(--lookbook-accent-400);
+  --lookbook-viewport-handle: var(--lookbook-white);
+  --lookbook-viewport-handle-icon-stroke: var(--lookbook-base-300);
+  --lookbook-viewport-handle-icon-stroke-hover: var(--lookbook-base-700);
+  --lookbook-sidebar-bg: var(--lookbook-base-50);
+  --lookbook-page-bg: var(--lookbook-white);
+  --lookbook-drawer-bg: var(--lookbook-base-50);
+  --lookbook-header-bg: var(--lookbook-accent-600);
+  --lookbook-header-text: var(--lookbook-white);
+  --lookbook-header-border: var(--lookbook-accent-700);
   --lookbook-branding-text: var(--lookbook-header-text);
   --lookbook-draggable-hint: #e0e7ff33;
 }
