Use correct cursor for vertical resize

--- a/app/views/lookbook/previews/panels/_preview.html.erb
+++ b/app/views/lookbook/previews/panels/_preview.html.erb
@@ -27,7 +27,7 @@
       </div>
 
       <div
-        class="resize-handle border-b border-l cursor-[col-resize]"
+        class="resize-handle border-b border-l cursor-[row-resize]"
         @pointerdown="onResizeHeightStart"
         @dblclick="toggleFullHeight"
       >
