--- a/docs/src/_components/shared/method_info.html.erb
+++ b/docs/src/_components/shared/method_info.html.erb
@@ -10,9 +10,11 @@
         <%= markdownify description %>
       </div>
     <% end %>
-    <div>
-      <%= markdownify signature %>
-    </div>
+    <% if display_signature %>
+      <div>
+        <%= markdownify signature %>
+      </div>
+    <% end %>
     <% if options_list %>
       <%= options_list %>
     <% end %>
