--- a/app/components/lookbook/viewport/component.html.erb
+++ b/app/components/lookbook/viewport/component.html.erb
@@ -34,7 +34,7 @@
         <% end %>
         <% if @resize_height %>
           <div
-            class="resize-handle border-b border-l border-lookbook-divider cursor-[col-resize] <%= "border-r" unless @resize_width %>"
+            class="resize-handle border-b border-l border-lookbook-divider cursor-[row-resize] <%= "border-r" unless @resize_width %>"
             @pointerdown="onResizeHeightStart"
             @dblclick="toggleFullHeight">
             <svg class="h-4 w-4 pointer-events-none rotate-90" fill="currentColor" viewBox="0 0 24 24" >
