--- a/app/components/lookbook/embed/component.html.erb
+++ b/app/components/lookbook/embed/component.html.erb
@@ -7,13 +7,13 @@
         <%= @example.preview.label %> (<%= @example.label %>)
       </h3>
     <% end %>
-      <% toolbar.section align: :right, divide: :left do %>
-        <%= render_component :button_group do |group| %>
+    <% toolbar.section align: :right, divide: :left do %>
+      <%= render_component :button_group do |group| %>
         <% group.button icon: :eye,
-          href: helpers.lookbook_inspect_path(@example.path, @params),
+          href: lookbook_inspect_path(@example.path, @params),
           tooltip: "View in Inspector" %>
         <% group.button icon: :external_link,
-          href: helpers.lookbook_inspect_path(@example.path, @params),
+          href: lookbook_inspect_path(@example.path, @params),
           tooltip: "Open in new window",
           target: "_blank" %>
       <% end %>
@@ -28,7 +28,7 @@
     @viewport:resize-complete="resizeIframe"
     @tabs:change.window="resizeIframe"> 
     <%= render_component :viewport,
-      src: helpers.lookbook_preview_path(@example.path, @params.merge(lookbook_embed: true)),
+      src: lookbook_preview_path(@example.path, @params.merge(lookbook_embed: true)),
       alpine_data: "store",
       resize_height: false,
       max_height: @max_height,
