Docs: Add custom tag docs

--- a/docs/src/_components/shared/note.css
+++ b/docs/src/_components/shared/note.css
@@ -16,4 +16,8 @@
       @apply border-t-blue-200;
     }
   }
+
+  & .highlighter-rouge:last-child .highlight {
+    margin-bottom: 0 !important;
+  }
 }
