--- a/app/components/lookbook/inspector_panel/component.html.erb
+++ b/app/components/lookbook/inspector_panel/component.html.erb
@@ -1,4 +1,6 @@
-<% if panel_styles %>
-  <% content_for :panel_css do %><%= panel_styles %><% end %>
+<%= render_component_tag :div, class: "h-full" do %>
+  <% if panel_styles %>
+    <% content_for :panel_css do %><%= panel_styles %><% end %>
+  <% end %>
+  <%= panel_html %>
 <% end %>
-<%= panel_html %>
