--- a/app/views/lookbook/previews/panels/_notes.html.erb
+++ b/app/views/lookbook/previews/panels/_notes.html.erb
@@ -11,7 +11,7 @@
     <% end %>
   </div>
 <% else %>
-  <div class="p-4 bg-lookbook-prose-bg w-full h-full">
+  <div class="px-4 py-6 bg-lookbook-prose-bg w-full h-full">
     <%= render_component :prose do %>
       <%== items.any? ? items.first.notes : "<em class='opacity-50'>No notes provided.</em>" %>
     <% end %>
