--- a/docs/src/_components/shared/options_list.html.erb
+++ b/docs/src/_components/shared/options_list.html.erb
@@ -1,7 +1,7 @@
-<%= tag.div **html_attrs, class: "not-prose my-6 px-3 py-2 bg-gray-100/60 rounded-md" do %>
+<%= tag.div **html_attrs, class: "not-prose px-3 py-2 bg-gray-100/60 rounded-md" do %>
   <table class="border-collapse text-base">
     <% options.each do |option| %>
-      <%= option %>
+      <%== option %>
     <% end %>
   </table>
 <% end %>
