Highlight previews in nav

--- a/app/components/lookbook/nav/item/component.html.erb
+++ b/app/components/lookbook/nav/item/component.html.erb
@@ -17,7 +17,7 @@
         class: "mr-1 text-lookbook-nav-toggle absolute -left-4",
         "x-effect": "iconName = open ? 'chevron-down' : 'chevron-right'" if children? %>
       <%= icon nav_icon, size: 3.5, class: "mr-1.5 text-lookbook-nav-icon-stroke" %>
-      <span><%= label %></span>
+      <span <% if @item.type == :preview %>class="font-bold"<% end %>><%= label %></span>
     </div>
   <% end %>
   
