Fix embed new window link

--- a/app/components/lookbook/embed/component.html.erb
+++ b/app/components/lookbook/embed/component.html.erb
@@ -13,7 +13,7 @@
           href: lookbook_inspect_path(@example.path, @params),
           tooltip: "View in Inspector" %>
         <% group.button icon: :external_link,
-          href: lookbook_inspect_path(@example.path, @params),
+          href: lookbook_preview_path(@example.path, @params),
           tooltip: "Open in new window",
           target: "_blank" %>
       <% end %>
