Fix docs site link

--- a/app/views/lookbook/index.html.erb
+++ b/app/views/lookbook/index.html.erb
@@ -7,7 +7,7 @@
       <% if Lookbook.previews? %>
         <p>Select a preview from the nav to get started.</p>
       <% else %>
-        <p><a class="underline" href="https://beta.lookbook.build/guide/previews" target="_blank">Create a preview</a> to get started.</p>
+        <p><a class="underline" href="https://lookbook.build/guide/previews" target="_blank">Create a preview</a> to get started.</p>
       <% end %>
     </div>
   </div>
