Add docs link into debug dropdown

--- a/app/components/lookbook/header/component.html.erb
+++ b/app/components/lookbook/header/component.html.erb
@@ -46,11 +46,11 @@
                   <span class="opacity-70 mr-1">Lookbook</span>
                   <span class="mr-6">v<%= Lookbook::VERSION %></span>
                   <div class="flex items-center space-x-2">
-                    <!-- a href="https://github.com/allmarkedup/lookbook" target="_blank" class="ml-auto opacity-70" title="Documentation">
-                      <%= icon  :book, size: 3 %>
-                    </a -->
+                    <a href="https://lookbook.build/guide" target="_blank" class="ml-auto opacity-70" title="Documentation">
+                      <%= icon :book, size: 3 %>
+                    </a>
                     <a href="https://github.com/allmarkedup/lookbook" target="_blank" class="ml-auto opacity-70" title="Github">
-                      <%= icon  :github, size: 3 %>
+                      <%= icon :github, size: 3 %>
                     </a>
                   </div>
                 </div>
